--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -51,7 +51,7 @@ body {
 	height: 2096px;
 	z-index: 1;
 	font-style: italic;
-	text-align: center;
+	text-align: left;
 	font-size: 24px;
 	color: #FFF;
 	background-color: rgba(20,47,29,0.8);
