--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,6 +25,23 @@ body {
 	padding: 5px;
 }
 
+.photo {
+	position: absolute;
+	left: 125px;
+	top: 307px;
+	width: 890px;
+	height: 1350px;
+	z-index: 1;
+	font-style: italic;
+	text-align: center;
+	font-size: 24px;
+	color: #FFF;
+	background-color: rgba(20,47,29,0.50);
+	border-radius: 30px 0px 30px 0px;
+	font-family: Verdana, Geneva, sans-serif;
+	padding: 5px;
+}
+
 .block {
 	position: absolute;
 	left: 3px;
